--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "type": "module",
   "devDependencies": {
     "@eslint/js": "^9.39.2",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "@types/helmet": "^0.0.48",
     "@types/node": "^25.0.10",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
@@ -30,7 +33,10 @@
     "typescript-eslint": "^8.53.1"
   },
   "dependencies": {
+    "@dotenvx/dotenvx": "^1.51.4",
+    "cors": "^2.8.6",
     "cross-env": "^10.1.0",
-    "@dotenvx/dotenvx": "^1.51.4"
+    "express": "^5.2.1",
+    "helmet": "^8.1.0"
   }
 }
