--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "cors": "^2.8.6",
     "cross-env": "^10.1.0",
     "express": "^5.2.1",
-    "helmet": "^8.1.0"
+    "helmet": "^8.1.0",
+    "pino-http": "^11.0.0",
+    "pino-pretty": "^13.1.3"
   }
 }
