--- a/package.json
+++ b/package.json
@@ -10,12 +10,22 @@
     "env:dev": "npx cross-env NODE_ENV=development",
     "build": "npm run env:prod -- npx tsc && npx tsc-alias",
     "start": "npm run env:prod -- node dist/app.js",
-    "dev": "npm run env:dev -- tsx --watch src/app.ts"
+    "dev": "npm run env:dev -- tsx watch src/app.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
+  "dependencies": {
+    "@dotenvx/dotenvx": "^1.51.4",
+    "cors": "^2.8.6",
+    "cross-env": "^10.1.0",
+    "express": "^5.2.1",
+    "helmet": "^8.1.0",
+    "http-status-ts": "^2.0.1",
+    "pino-http": "^11.0.0",
+    "pino-pretty": "^13.1.3"
+  },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "@types/cors": "^2.8.19",
@@ -31,14 +41,5 @@
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.53.1"
-  },
-  "dependencies": {
-    "@dotenvx/dotenvx": "^1.51.4",
-    "cors": "^2.8.6",
-    "cross-env": "^10.1.0",
-    "express": "^5.2.1",
-    "helmet": "^8.1.0",
-    "pino-http": "^11.0.0",
-    "pino-pretty": "^13.1.3"
   }
 }
