db/orm + validation: init

--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
     "format": "npx prettier ./src/.",
     "env:prod": "npx cross-env NODE_ENV=production",
     "env:dev": "npx cross-env NODE_ENV=development",
+    "env:test": "npx cross-env NODE_ENV=test",
     "build": "npm run env:prod -- npx tsc && npx tsc-alias",
     "start": "npm run env:prod -- node dist/app.js",
-    "dev": "npm run env:dev -- tsx watch src/app.ts"
+    "dev": "npm run env:dev -- tsx watch src/app.ts",
+    "dev:db:migrate": "npm run env:dev -- npx prisma migrate dev",
+    "dev:db:generate": "npm run env:dev -- npx prisma generate",
+    "dev:db:reset": "npm run env:dev -- npx prisma migrate reset",
+    "dev:db:prisma:studio": "npm run env:dev -- npx prisma studio",
+    "test:db:migrate": "npm run env:test -- npx prisma migrate dev",
+    "test:db:generate": "npm run env:test -- npx prisma generate",
+    "test:db:reset": "npm run env:test -- npx prisma migrate reset",
+    "test:db:prisma:studio": "npm run env:test -- npx prisma studio"
   },
   "keywords": [],
   "author": "",
@@ -18,13 +27,17 @@
   "type": "module",
   "dependencies": {
     "@dotenvx/dotenvx": "^1.51.4",
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
     "cors": "^2.8.6",
     "cross-env": "^10.1.0",
     "express": "^5.2.1",
     "helmet": "^8.1.0",
     "http-status-ts": "^2.0.1",
+    "pg": "^8.17.2",
     "pino-http": "^11.0.0",
-    "pino-pretty": "^13.1.3"
+    "pino-pretty": "^13.1.3",
+    "valibot": "^1.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
@@ -32,11 +45,13 @@
     "@types/express": "^5.0.6",
     "@types/helmet": "^0.0.48",
     "@types/node": "^25.0.10",
+    "@types/pg": "^8.16.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "globals": "^17.0.0",
     "jiti": "^2.6.1",
     "prettier": "^3.8.0",
+    "prisma": "^7.3.0",
     "tsc-alias": "^1.8.16",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
