test: setup vitest

--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "description": "",
   "main": "./src/main.js",
   "scripts": {
-    "lint": "npx eslint ./src/.",
-    "format": "npx prettier ./src/.",
+    "lint:check": "npx eslint ./src/.",
+    "lint:fix": "npx eslint --fix ./src/.",
+    "format:check": "npx prettier ./",
+    "format:fix": "npx prettier --write ./",
     "env:prod": "npx cross-env NODE_ENV=production",
     "env:dev": "npx cross-env NODE_ENV=development",
     "env:test": "npx cross-env NODE_ENV=test",
-    "build": "npm run env:prod -- npx tsc && npx tsc-alias",
+    "build": "npm run env:prod -- rm -rf ./dist && npx tsc --project tsconfig.build.json && npx tsc-alias",
     "start": "npm run env:prod -- node dist/app.js",
     "dev": "npm run env:dev -- tsx watch src/app.ts",
     "dev:db:migrate": "npm run env:dev -- npx prisma migrate dev",
     "dev:db:generate": "npm run env:dev -- npx prisma generate",
     "dev:db:reset": "npm run env:dev -- npx prisma migrate reset",
     "dev:db:prisma:studio": "npm run env:dev -- npx prisma studio",
+    "test": "npx vitest run",
+    "test:coverage": "npx vitest run --coverage",
     "test:db:migrate": "npm run env:test -- npx prisma migrate dev",
     "test:db:generate": "npm run env:test -- npx prisma generate",
     "test:db:reset": "npm run env:test -- npx prisma migrate reset",
@@ -46,15 +50,21 @@
     "@types/helmet": "^0.0.48",
     "@types/node": "^25.0.10",
     "@types/pg": "^8.16.0",
+    "@types/supertest": "^6.0.3",
+    "@vitest/coverage-v8": "^4.0.18",
+    "@vitest/eslint-plugin": "^1.6.6",
+    "@vitest/ui": "^4.0.18",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "globals": "^17.0.0",
     "jiti": "^2.6.1",
     "prettier": "^3.8.0",
     "prisma": "^7.3.0",
+    "supertest": "^7.2.2",
     "tsc-alias": "^1.8.16",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.53.1"
+    "typescript-eslint": "^8.53.1",
+    "vitest": "^4.0.18"
   }
 }
