refactor + auth init

--- a/package.json
+++ b/package.json
@@ -14,16 +14,24 @@
     "build": "npm run env:prod -- rm -rf ./dist && npx tsc --project tsconfig.build.json && npx tsc-alias",
     "start": "npm run env:prod -- node dist/app.js",
     "dev": "npm run env:dev -- tsx watch src/app.ts",
-    "dev:db:migrate": "npm run env:dev -- npx prisma migrate dev",
-    "dev:db:generate": "npm run env:dev -- npx prisma generate",
-    "dev:db:reset": "npm run env:dev -- npx prisma migrate reset",
-    "dev:db:prisma:studio": "npm run env:dev -- npx prisma studio",
+    "dev:db:nextDemoApi:migrate": "npm run env:dev -- npx prisma migrate dev --schema ./src/api/nextDemo/prisma/schema.prisma",
+    "dev:db:nextDemoApi:generate": "npm run env:dev -- npx prisma generate --schema ./src/api/nextDemo/prisma/schema.prisma",
+    "dev:db:nextDemoApi:reset": "npm run env:dev -- npx prisma reset --schema ./src/api/nextDemo/prisma/schema.prisma",
+    "dev:db:nextDemoApi:studio": "npm run env:dev -- npx prisma studio --config ./src/api/nextDemo/prisma/prisma.config.ts",
+    "dev:db:migrate": "npm run dev:db:nextDemoApi:migrate",
+    "dev:db:generate": "npm run dev:db:nextDemoApi:generate",
+    "dev:db:reset": "npm run dev:db:nextDemoApi:reset",
+    "dev:db:studio": "npm run dev:db:nextDemoApi:studio",
     "test": "npx vitest run",
     "test:coverage": "npx vitest run --coverage",
-    "test:db:migrate": "npm run env:test -- npx prisma migrate dev",
-    "test:db:generate": "npm run env:test -- npx prisma generate",
-    "test:db:reset": "npm run env:test -- npx prisma migrate reset",
-    "test:db:prisma:studio": "npm run env:test -- npx prisma studio"
+    "test:db:nextDemoApi:migrate": "npm run env:test -- npx prisma migrate dev --schema ./src/api/nextDemo/prisma/schema.prisma",
+    "test:db:nextDemoApi:generate": "npm run env:test -- npx prisma generate --schema ./src/api/nextDemo/prisma/schema.prisma",
+    "test:db:nextDemoApi:reset": "npm run env:test -- npx prisma reset --schema ./src/api/nextDemo/prisma/schema.prisma",
+    "test:db:nextDemoApi:studio": "npm run env:test -- npx prisma studio --config ./src/api/nextDemo/prisma/prisma.config.ts",
+    "test:db:migrate": "npm run test:db:nextDemoApi:migrate",
+    "test:db:generate": "npm run test:db:nextDemoApi:generate",
+    "test:db:reset": "npm run test:db:nextDemoApi:reset",
+    "test:db:studio": "npm run test:db:nextDemoApi:studio"
   },
   "keywords": [],
   "author": "",
@@ -31,13 +39,16 @@
   "type": "module",
   "dependencies": {
     "@dotenvx/dotenvx": "^1.51.4",
+    "@node-rs/argon2": "^2.0.2",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "better-auth": "^1.4.18",
     "cors": "^2.8.6",
     "cross-env": "^10.1.0",
     "express": "^5.2.1",
     "helmet": "^8.1.0",
     "http-status-ts": "^2.0.1",
+    "nodemailer": "^7.0.13",
     "pg": "^8.17.2",
     "pino-http": "^11.0.0",
     "pino-pretty": "^13.1.3",
@@ -49,6 +60,7 @@
     "@types/express": "^5.0.6",
     "@types/helmet": "^0.0.48",
     "@types/node": "^25.0.10",
+    "@types/nodemailer": "^7.0.9",
     "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.3",
     "@vitest/coverage-v8": "^4.0.18",
