--- a/package.json
+++ b/package.json
@@ -14,20 +14,20 @@
     "build": "npm run env:prod -- rm -rf ./dist && npx tsc --project tsconfig.build.json && npx tsc-alias",
     "start": "npm run env:prod -- node dist/app.js",
     "dev": "npm run env:dev -- tsx watch src/app.ts",
-    "dev:db:nextDemoApi:migrate": "npm run env:dev -- npx prisma migrate dev --schema ./prisma-next-demo --config ./prisma-next-demo/prisma.config.ts",
-    "dev:db:nextDemoApi:generate": "npm run env:dev -- npx prisma generate --schema ./prisma-next-demo --config ./prisma-next-demo/prisma.config.ts",
-    "dev:db:nextDemoApi:reset": "npm run env:dev -- npx prisma migrate reset --schema ./prisma-next-demo --config ./prisma-next-demo/prisma.config.ts",
-    "dev:db:nextDemoApi:studio": "npm run env:dev -- npx prisma studio --config ./prisma-next-demo/prisma.config.ts",
+    "dev:db:nextDemoApi:migrate": "npm run env:dev -- npx prisma migrate dev --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
+    "dev:db:nextDemoApi:generate": "npm run env:dev -- npx prisma generate --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
+    "dev:db:nextDemoApi:reset": "npm run env:dev -- npx prisma migrate reset --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
+    "dev:db:nextDemoApi:studio": "npm run env:dev -- npx prisma studio --config ./src/modules/nextDemo/prisma/prisma.config.ts",
     "dev:db:migrate": "npm run dev:db:nextDemoApi:migrate",
     "dev:db:generate": "npm run dev:db:nextDemoApi:generate",
     "dev:db:reset": "npm run dev:db:nextDemoApi:reset",
     "dev:db:studio": "npm run dev:db:nextDemoApi:studio",
     "test": "npx vitest run",
     "test:coverage": "npx vitest run --coverage",
-    "test:db:nextDemoApi:migrate": "npm run env:test -- npx prisma migrate dev --schema ./prisma-next-demo --config ./prisma-next-demo/prisma.config.ts",
-    "test:db:nextDemoApi:generate": "npm run env:test -- npx prisma generate --schema ./prisma-next-demo --config ./prisma-next-demo/prisma.config.ts",
-    "test:db:nextDemoApi:reset": "npm run env:test -- npx prisma migrate reset --schema ./prisma-next-demo --config ./prisma-next-demo/prisma.config.ts",
-    "test:db:nextDemoApi:studio": "npm run env:test -- npx prisma studio --config ./prisma-next-demo/prisma.config.ts",
+    "test:db:nextDemoApi:migrate": "npm run env:test -- npx prisma migrate dev --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
+    "test:db:nextDemoApi:generate": "npm run env:test -- npx prisma generate --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
+    "test:db:nextDemoApi:reset": "npm run env:test -- npx prisma migrate reset --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
+    "test:db:nextDemoApi:studio": "npm run env:test -- npx prisma studio --config ./src/modules/nextDemo/prisma/prisma.config.ts",
     "test:db:migrate": "npm run test:db:nextDemoApi:migrate",
     "test:db:generate": "npm run test:db:nextDemoApi:generate",
     "test:db:reset": "npm run test:db:nextDemoApi:reset",
