auth: cors setup for local development

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Express Ts Rest API",
+  "name": "Nextjs Express Demo Rest API",
   "version": "1.0.0",
   "description": "",
   "main": "./src/main.js",
