refactor: build checks and commands

--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "./src/main.js",
   "scripts": {
-    "lint:check": "npx eslint ./src/.",
-    "lint:fix": "npx eslint --fix ./src/.",
-    "format:check": "npx prettier ./",
-    "format:fix": "npx prettier --write ./",
+    "lint:check": "npx eslint ./src",
+    "lint:fix": "npx eslint --fix ./src",
+    "format:check": "npx prettier --check .",
+    "format:fix": "npx prettier --write .",
+    "preBuildCheck": "npm run format:check && npm run lint:check && npx tsc --noEmit",
     "env:prod": "npx cross-env NODE_ENV=production",
     "env:dev": "npx cross-env NODE_ENV=development",
     "env:test": "npx cross-env NODE_ENV=test",
-    "build": "npm run env:prod -- rm -rf ./dist && npx tsc --project tsconfig.build.json && npx tsc-alias",
+    "build": "npm run env:prod -- npm run preBuildCheck && rm -rf ./dist && npx tsc --project tsconfig.build.json && npx tsc-alias",
     "start": "npm run env:prod -- node dist/app.js",
     "dev": "npm run env:dev -- tsx watch src/app.ts",
     "dev:db:nextDemoApi:migrate": "npm run env:dev -- npx prisma migrate dev --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
