refactor: scripts: test

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "./src/main.js",
   "scripts": {
-    "lint:check": "npx eslint ./src",
-    "lint:fix": "npx eslint --fix ./src",
-    "format:check": "npx prettier --check .",
-    "format:fix": "npx prettier --write .",
-    "preBuildCheck": "npm run format:check && npm run lint:check && npx tsc --noEmit",
+    "check:lint": "npx eslint ./src",
+    "check:format": "npx prettier --check .",
+    "check:types": "npx tsc --noEmit",
+    "fix:format": "npx prettier --write .",
+    "fix:lint": "npx eslint --fix ./src",
+    "check": "npm run check:format && npm run check:lint && npm run check:types",
     "env:prod": "npx cross-env NODE_ENV=production",
     "env:dev": "npx cross-env NODE_ENV=development",
     "env:test": "npx cross-env NODE_ENV=test",
@@ -23,7 +24,7 @@
     "dev:db:generate": "npm run dev:db:nextDemoApi:generate",
     "dev:db:reset": "npm run dev:db:nextDemoApi:reset",
     "dev:db:studio": "npm run dev:db:nextDemoApi:studio",
-    "test": "npx vitest run",
+    "test": "npm:env:test -- npx vitest run",
     "test:coverage": "npx vitest run --coverage",
     "test:db:nextDemoApi:migrate": "npm run env:test -- npx prisma migrate dev --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
     "test:db:nextDemoApi:generate": "npm run env:test -- npx prisma generate --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
