--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "env:prod": "npx cross-env NODE_ENV=production",
     "env:dev": "npx cross-env NODE_ENV=development",
     "env:test": "npx cross-env NODE_ENV=test",
-    "build": "npm run env:prod -- npm run preBuildCheck && rm -rf ./dist && npx tsc --project tsconfig.build.json && npx tsc-alias",
+    "build": "npm run env:prod -- npm run check && rm -rf ./dist && npx tsc --project tsconfig.build.json && npx tsc-alias",
     "start": "npm run env:prod -- node dist/app.js",
     "dev": "npm run env:dev -- tsx watch src/app.ts",
     "dev:db:nextDemoApi:migrate": "npm run env:dev -- npx prisma migrate dev --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
