auth: config: cookie

--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "check:lint": "npx eslint ./src",
     "check:format": "npx prettier --check .",
     "check:types": "npx tsc --noEmit",
+    "check": "npm run check:format && npm run check:lint && npm run check:types",
+    "check:build": "npm run check && npm run build",
     "fix:format": "npx prettier --write .",
     "fix:lint": "npx eslint --fix ./src",
-    "check": "npm run check:format && npm run check:lint && npm run check:types",
     "env:prod": "npx cross-env NODE_ENV=production",
     "env:dev": "npx cross-env NODE_ENV=development",
     "env:test": "npx cross-env NODE_ENV=test",
-    "build": "npm run env:prod -- npm run check && rm -rf ./dist && npx tsc --project tsconfig.build.json && npx tsc-alias",
+    "build": "npm run env:prod -- rm -rf ./dist && npx tsc --project tsconfig.build.json && npx tsc-alias",
     "start": "npm run env:prod -- node dist/src/app.js",
     "prod:db:nextDemoApi:deploy": "npm run env:prod -- npx prisma migrate deploy --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
     "prod:db:nextDemoApi:generate": "npm run env:prod -- npx prisma generate --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
@@ -29,7 +30,8 @@
     "test:db:nextDemoApi:migrate": "npm run env:test -- npx prisma migrate dev --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
     "test:db:nextDemoApi:generate": "npm run env:test -- npx prisma generate --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
     "test:db:nextDemoApi:reset": "npm run env:test -- npx prisma migrate reset --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
-    "test:db:nextDemoApi:studio": "npm run env:test -- npx prisma studio --config ./src/modules/nextDemo/prisma/prisma.config.ts", "test:db:migrate": "npm run test:db:nextDemoApi:migrate"
+    "test:db:nextDemoApi:studio": "npm run env:test -- npx prisma studio --config ./src/modules/nextDemo/prisma/prisma.config.ts",
+    "test:db:migrate": "npm run test:db:nextDemoApi:migrate"
   },
   "keywords": [],
   "author": "",
