refactor: ops, scripts: createEnvSamples

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "check:lint": "npx eslint ./src",
     "check:format": "npx prettier --check .",
     "check:types": "npx tsc --noEmit",
-    "check": "npm run check:format && npm run check:lint && npm run check:types",
-    "check:build": "npm run check && npm run build",
+    "check": "npm run check:format && npm run check:lint && npm run check:types && npm run build",
     "fix:format": "npx prettier --write .",
     "fix:lint": "npx eslint --fix ./src",
     "env:prod": "npx cross-env NODE_ENV=production",
@@ -16,22 +15,22 @@
     "env:test": "npx cross-env NODE_ENV=test",
     "build": "rm -rf ./dist && npm run env:prod -- npx tsc --project tsconfig.build.json && npm run env:prod -- npx tsc-alias",
     "start": "npm run env:prod -- node dist/src/app.js",
-    "prod:db:nextDemoApi:deploy": "npm run env:prod -- npx prisma migrate deploy --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
-    "prod:db:nextDemoApi:generate": "npm run env:prod -- npx prisma generate --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
-    "prod:db:nextDemoApi:reset": "npm run env:prod -- npx prisma migrate reset --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
-    "prod:db:nextDemoApi:studio": "npm run env:prod -- npx prisma studio --config ./src/modules/nextDemo/prisma/prisma.config.ts",
     "dev": "npm run env:dev -- tsx watch src/app.ts",
-    "dev:db:nextDemoApi:migrate": "npm run env:dev -- npx prisma migrate dev --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
-    "dev:db:nextDemoApi:generate": "npm run env:dev -- npx prisma generate --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
-    "dev:db:nextDemoApi:reset": "npm run env:dev -- npx prisma migrate reset --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
-    "dev:db:nextDemoApi:studio": "npm run env:dev -- npx prisma studio --config ./src/modules/nextDemo/prisma/prisma.config.ts",
     "test": "npm:env:test -- npx vitest run",
     "test:coverage": "npx vitest run --coverage",
-    "test:db:nextDemoApi:migrate": "npm run env:test -- npx prisma migrate dev --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
-    "test:db:nextDemoApi:generate": "npm run env:test -- npx prisma generate --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
-    "test:db:nextDemoApi:reset": "npm run env:test -- npx prisma migrate reset --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
-    "test:db:nextDemoApi:studio": "npm run env:test -- npx prisma studio --config ./src/modules/nextDemo/prisma/prisma.config.ts",
-    "test:db:migrate": "npm run test:db:nextDemoApi:migrate"
+    "db:prod:nextDemoApi:deploy": "npm run env:prod -- npx prisma migrate deploy --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
+    "db:prod:nextDemoApi:generate": "npm run env:prod -- npx prisma generate --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
+    "db:prod:nextDemoApi:reset": "npm run env:prod -- npx prisma migrate reset --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
+    "db:prod:nextDemoApi:studio": "npm run env:prod -- npx prisma studio --config ./src/modules/nextDemo/prisma/prisma.config.ts",
+    "db:dev:nextDemoApi:migrate": "npm run env:dev -- npx prisma migrate dev --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
+    "db:dev:nextDemoApi:generate": "npm run env:dev -- npx prisma generate --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
+    "db:dev:nextDemoApi:reset": "npm run env:dev -- npx prisma migrate reset --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
+    "db:dev:nextDemoApi:studio": "npm run env:dev -- npx prisma studio --config ./src/modules/nextDemo/prisma/prisma.config.ts",
+    "db:test:nextDemoApi:migrate": "npm run env:test -- npx prisma migrate dev --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
+    "db:test:nextDemoApi:generate": "npm run env:test -- npx prisma generate --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
+    "db:test:nextDemoApi:reset": "npm run env:test -- npx prisma migrate reset --schema ./src/modules/nextDemo/prisma --config ./src/modules/nextDemo/prisma/prisma.config.ts",
+    "db:test:nextDemoApi:studio": "npm run env:test -- npx prisma studio --config ./src/modules/nextDemo/prisma/prisma.config.ts",
+    "ops:createEnvSamples": "tsx --no-warnings ops/createEnvSamples.js"
   },
   "keywords": [],
   "author": "",
