--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "better-auth": "^1.4.18",
+    "cookie": "^1.1.1",
     "cors": "^2.8.6",
     "cross-env": "^10.1.0",
     "express": "^5.2.1",
